--- a/JUJERY/sub/main_menu_brewery/eco_brewery/eco.html
+++ b/JUJERY/sub/main_menu_brewery/eco_brewery/eco.html
@@ -9,7 +9,7 @@
     <meta name="description" property="og:description" content="우리 역사와 문화가 담긴 전통주를 만나보세요." />
     <meta name="type" property="og:type" content="article" />
     <link rel="stylesheet" href="./css/eco.css" />
-    <link rel="shortcut icon" type="image" href="../../../../images/logo/jujery_page_shortcut_icon.png" />
+    <link rel="shortcut icon" type="image" href="../../../images/logo/jujery_page_shortcut_icon.png" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
