--- a/JUJERY/sub/other_menu/traditional_alcohol/traditional_alcohol.html
+++ b/JUJERY/sub/other_menu/traditional_alcohol/traditional_alcohol.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" property="og:title" content="전통주란?">
-    <meta name="images" property="og:image" content="../../main_menu_type/images/icon/thumnail.png">
-    <meta name="description" property="og:description" content="우리 역사와 문화가 담긴 전통주를 만나보세요.">
-    <meta name="type" property="og:type" content="article">
+    <meta name="title" property="og:title" content="전통주란?" />
+    <meta name="images" property="og:image" content="../../main_menu_type/images/icon/thumnail.png" />
+    <meta name="description" property="og:description" content="우리 역사와 문화가 담긴 전통주를 만나보세요." />
+    <meta name="type" property="og:type" content="article" />
     <link rel="stylesheet" href="./css/traditional_alcohol.css" />
-    <link rel="shortcut icon" type="image" href="../../main_menu_type/images/icon/jujerytitlelogo.png">
+    <link rel="shortcut icon" type="image" href="../../main_menu_type/images/icon/jujerytitlelogo.png" />
     <title>전통주란?</title>
     <script src="./js/jquery.js" defer></script>
     <script src="./js/side_bar.js" defer></script>
@@ -208,32 +208,39 @@
                   <li><a href="../community/community.html">소통하기</a></li>
                   <li><a href="../logo/logo.html">상징</a></li>
                 </ul>
-              </div> <!-- mainSubMenu -->
+              </div>
+              <!-- mainSubMenu -->
 
               <section class="def_alcohol">
                 <div class="presentation">
-                  <video autoplay loop muted poster="./mp4/traditional_alcohol_img.png">
-                      <source src="./mp4/def_alcohol.mp4" type="video/mp4">
+                  <video muted autoplay playsinline loop poster="./mp4/traditional_alcohol_img.png">
+                    <source src="./mp4/def_alcohol.mp4" type="video/mp4" />
                   </video>
-                </div> <!-- presentation -->
+                </div>
+                <!-- presentation -->
                 <div class="text_box">
                   <div class="quot_box">
                     <h3>"좋은 술과 음식, 소중한 이와 즐기다"</h3>
-                    <p>예부터 우리 민족은 귀한 손님이 오면 술을 내어 대접하는 것을 예절로 알았습니다. 집집마다 가양주도 손님을 극진히 대접하고 조상께 예를 갖추기 위해 탄생한 술입니다.<br>
-                    - 김승희(전통문화 칼럼니스트)</p>
+                    <p>
+                      예부터 우리 민족은 귀한 손님이 오면 술을 내어 대접하는 것을 예절로 알았습니다. 집집마다 가양주도 손님을 극진히 대접하고 조상께 예를 갖추기 위해 탄생한 술입니다.<br />
+                      - 김승희(전통문화 칼럼니스트)
+                    </p>
                   </div>
                   <div class="def_box">
                     <h4>&lt;전통주의 정의&gt;</h4>
                     <p>
-                      * 무형문화재 보전 및 진흥에 관한 법률에 따라 지정된 주류부문의 국가 무형문화재와 무형문화재의 보유자가 주류. 면허 등에 관한 법률에 따라 면허를 받아 제조한 술<br>
-                      * 식품산업진흥법에 따라 지정된 주류부문 대한민국식품명인이 주류 면허등에 관한 볍률에면허를 받아 제조한 술<br>
-                      * 지역특산주, 농어업경영체 및 생산자단체가 직접 생산하거나 제조장 소재지 또는 관할자체단체에서 생산한 농산물을 주원료로 제조한 술로서 시,도지사의 추천을 받아 주류 면허를제조한 술</p>
+                      * 무형문화재 보전 및 진흥에 관한 법률에 따라 지정된 주류부문의 국가 무형문화재와 무형문화재의 보유자가 주류. 면허 등에 관한 법률에 따라 면허를 받아 제조한 술<br />
+                      * 식품산업진흥법에 따라 지정된 주류부문 대한민국식품명인이 주류 면허등에 관한 볍률에면허를 받아 제조한 술<br />
+                      * 지역특산주, 농어업경영체 및 생산자단체가 직접 생산하거나 제조장 소재지 또는 관할자체단체에서 생산한 농산물을 주원료로 제조한 술로서 시,도지사의 추천을 받아 주류 면허를제조한 술
+                    </p>
                   </div>
-                </div> <!-- text_box -->
+                </div>
+                <!-- text_box -->
               </section>
-              
-            </div> <!-- main -->
-          </div> <!-- container -->
+            </div>
+            <!-- main -->
+          </div>
+          <!-- container -->
         </main>
       </div>
 
