--- a/JUJERY/sub/main_menu_region/gangwon/gangwon.html
+++ b/JUJERY/sub/main_menu_region/gangwon/gangwon.html
@@ -8,6 +8,7 @@
     <meta name="images" property="og:image" content="../../main_menu_type/images/icon/thumnail.png">
     <meta name="description" property="og:description" content="우리 역사와 문화가 담긴 전통주를 만나보세요.">
     <meta name="type" property="og:type" content="article">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <script src="../js/jquery.js"></script>
     <script src="../js/bxSlider.js"></script>
