--- a/JUJERY/sub/main_menu_region/gyeonggi/gyeonggi.html
+++ b/JUJERY/sub/main_menu_region/gyeonggi/gyeonggi.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" property="og:title" content="경기도">
+    <meta name="images" property="og:image" content="../../main_menu_type/images/icon/thumnail.png">
+    <meta name="description" property="og:description" content="우리 역사와 문화가 담긴 전통주를 만나보세요.">
+    <meta name="type" property="og:type" content="article">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <link rel="stylesheet" href="./css/gyeonggi.css" />
     <link rel="shortcut icon" type="image" href="../img/region/logo_mini.png" />
