--- a/JUJERY/index.html
+++ b/JUJERY/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="Author" content="서현" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" property="og:title" content="주저리" />
-    <meta name="images" property="og:image" content="images/logo/meta_img.png" />
+    <meta name="images" property="og:image" content="./images/logo/meta_img.png" />
     <meta name="description" property="og:description" content="우리 역사와 문화가 담긴 전통주를 만나보세요." />
     <meta name="type" property="og:type" content="article" />
+    <link rel="shortcut icon" type="image" href="./images/logo/jujery_page_shortcut_icon.png" />
+    <link rel="stylesheet" href="./css/index.css" />
     <script src="./js/jquery.js"></script>
     <script src="./js/index.js"></script>
-    <link rel="stylesheet" href="./css/index.css" />
-    <link rel="shortcut icon" type="image" href="images/logo/jujery_page_shortcut_icon.png" />
-    <script src="https://kit.fontawesome.com/c15ab5fbf1.js" crossorigin="anonymous"></script>
     <title>주저리</title>
   </head>
   <body>
