--- a/JUJERY/sub/main_menu_brewery/eco_brewery/eco.html
+++ b/JUJERY/sub/main_menu_brewery/eco_brewery/eco.html
@@ -3,17 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="Author" content="서현" />
+    <meta name="description" content="친환경 양조장" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" property="og:title" content="친환경 양조장" />
-    <meta name="images" property="og:image" content="../../main_menu_type/images/icon/thumnail.png" />
-    <meta name="description" property="og:description" content="우리 역사와 문화가 담긴 전통주를 만나보세요." />
-    <meta name="type" property="og:type" content="article" />
-    <link rel="stylesheet" href="./css/eco.css" />
     <link rel="shortcut icon" type="image" href="../../../images/logo/jujery_page_shortcut_icon.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+    <link rel="stylesheet" href="./css/eco.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
-    <script src="./js/jquery.js"></script>
     <script src="./js/eco.js"></script>
     <title>친환경 양조장</title>
   </head>
