--- a/JUJERY/sub/other_menu/about_us/about_us.html
+++ b/JUJERY/sub/other_menu/about_us/about_us.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" property="og:title" content="우리의 이야기">
-    <meta name="images" property="og:image" content="../../main_menu_type/images/icon/thumnail.png">
-    <meta name="description" property="og:description" content="우리 역사와 문화가 담긴 전통주를 만나보세요.">
-    <meta name="type" property="og:type" content="article">
-    <script src="../../main_menu_region/js/jquery.js"></script>
-    <script src="../../main_menu_region/js/bxSlider.js"></script>
+    <meta name="Author" content="조유정" />
+    <meta name="description" content="우리 역사와 문화가 담긴 전통주를 만나보세요." />
+    <link
+    rel="shortcut icon"
+    type="image"
+    href="../../../images/logo/jujery_page_shortcut_icon.png"
+    />
+    <link rel="stylesheet" href="./css/about_us.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+    <script src="../../main_menu_region/js/bxSlider.js"></script>
     <script src="./js/logomenu.js"></script>
-    <link rel="stylesheet" href="./css/about_us.css" />
-    <link
-      rel="shortcut icon"
-      type="image"
-      href="../../../images/logo/jujery_page_shortcut_icon.png"
-    />
     <title>우리의 이야기</title>
   </head>
   <body>
