--- a/JUJERY/sub/main_menu_type/jeungryusoo/jeungryusoo.html
+++ b/JUJERY/sub/main_menu_type/jeungryusoo/jeungryusoo.html
@@ -3,22 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="Author" content="왕혜민" />
+    <meta name="description" content="증류주">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" property="og:title" content="증류주">
-    <meta name="images" property="og:image" content="../images/icon/thumnail.png">
-    <meta name="description" property="og:description" content="우리 역사와 문화가 담긴 전통주를 만나보세요.">
-    <meta name="type" property="og:type" content="article">
-    <link rel="stylesheet" href="./css/jeungryusoo.css" />
+    <link rel="shortcut icon" type="image" href="../../../images/logo/jujery_page_shortcut_icon.png" />
     <link rel="stylesheet" href="./css/owl.carousel.css">
-    <link rel="shortcut icon" type="image" href="../images/icon/jujerytitlelogo.png"  />
-    <title>증류주</title>
-    <script src="../js/jquery.js" defer></script>
-    <script src="../js/main2,4_common.js" defer></script>
+    <link rel="stylesheet" href="./css/jeungryusoo.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js" defer></script>
-    <script src="../js/slick.min.js" defer></script>
+    <script src="../js/main2,4_common.js" defer></script>
     <script src="../js/owl.carousel.js" defer></script>
     <script src="../js/owl.carousel.min.js" defer></script>
+    <script src="../js/slick.min.js" defer></script>
+    <title>증류주</title>
   </head>
   <body>
     <div class="wrapper">
