--- a/JUJERY/sub/main_menu_type/variety.html
+++ b/JUJERY/sub/main_menu_type/variety.html
@@ -3,19 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="Author" content="왕혜민" />
+    <meta name="description" content="종류별">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" property="og:title" content="주저리">
-    <meta name="images" property="og:image" content="../../../images/icon/thumnail.png">
-    <meta name="description" property="og:description" content="우리 역사와 문화가 담긴 전통주를 만나보세요.">
-    <meta name="type" property="og:type" content="article">
+    <link rel="shortcut icon" type="image" href="../../images/logo/jujery_page_shortcut_icon.png" />
     <link rel="stylesheet" href="./css/variety.css" />
-    <link rel="shortcut icon" type="image" href="../main_menu_type/images/icon/jujerytitlelogo.png" />
-    <title>종류별</title>
-    <script src="./js/jquery.js" defer></script>
-    <script src="./js/variety.js" defer></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+    <script src="./js/variety.js" defer></script>
+    <title>종류별</title>
   </head>
   <body>
     <div class="wrapper">
