--- a/JUJERY/sub/other_menu/community/community.html
+++ b/JUJERY/sub/other_menu/community/community.html
@@ -3,17 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="Author" content="박진주" />
+    <meta name="description" content="소통하기" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" property="og:title" content="소통하기">
-    <meta name="images" property="og:image" content="../../main_menu_era/img/tag.png">
-    <meta name="description" property="og:description" content="우리 역사와 문화가 담긴 전통주를 만나보세요.">
-    <meta name="type" property="og:type" content="article">
+    <link rel="shortcut icon" type="image" href="../../../images/logo/jujery_page_shortcut_icon.png" />
     <link rel="stylesheet" href="./css/community.css" />
-    <link rel="shortcut icon" type="image" href="../../main_menu_era/img/favicon.ico" />
-    <title>소통하기</title>
-    <script src="js/jquery.js"></script>
-    <script src="js/jquery-3.6.1.min.js"></script>
+    <script src="../../../js/jquery.js"></script>
     <script src="js/community.js"></script>
+    <title>소통하기</title>
   </head>
   <body>
     <div class="wrapper">
@@ -87,7 +84,7 @@
             <div class="mobileLogoMenu">
               <div class="mobileLogo">
                 <h1>
-                  <a href="../../../index.html"> <img src="../../../images/logo/mobile_detail_white_logo.png" alt ="mobilelogo" /> </a>
+                  <a href="../../../index.html"> <img src="../../../images/logo/mobile_detail_white_logo.png" alt="mobilelogo" /> </a>
                 </h1>
               </div>
               <div class="beforeMenu">
@@ -221,12 +218,12 @@
               <div class="notice-board">
                 <table>
                   <colgroup>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
+                    <col />
+                    <col />
+                    <col />
+                    <col />
+                    <col />
+                    <col />
                   </colgroup>
                   <thead>
                     <tr>
@@ -259,15 +256,16 @@
                 </table>
 
                 <div class="board-number">
-                    <a href="#"> &lt; </a>
-                    <a href="#">1</a> 
-                    <a href="#">2</a>
-                    <a href="#">3</a>
-                    <a href="#">4</a>
-                    <a href="#">5</a>
-                    <a href="#">6</a> 
-                    <a href="#"> &gt; </a>
-                </div> <!--board-number-->
+                  <a href="#"> &lt; </a>
+                  <a href="#">1</a>
+                  <a href="#">2</a>
+                  <a href="#">3</a>
+                  <a href="#">4</a>
+                  <a href="#">5</a>
+                  <a href="#">6</a>
+                  <a href="#"> &gt; </a>
+                </div>
+                <!--board-number-->
 
                 <div class="search-box">
                   <form action="#" method="post">
@@ -277,14 +275,19 @@
                       <option value="content">내용</option>
                     </select>
                     <div class="search-input-box">
-                      <input type="search" name="search" class="search">
-                      <input type="button" name="btn" class="btn" value="검색">
-                    </div> <!-- search-input-box -->
+                      <input type="search" name="search" class="search" />
+                      <input type="button" name="btn" class="btn" value="검색" />
+                    </div>
+                    <!-- search-input-box -->
                   </form>
-                </div> <!-- search-box-->
-              </div> <!-- notice- board -->
-            </div><!-- container -->
-          </div><!-- main -->
+                </div>
+                <!-- search-box-->
+              </div>
+              <!-- notice- board -->
+            </div>
+            <!-- container -->
+          </div>
+          <!-- main -->
         </main>
       </div>
 
