--- a/JUJERY/sub/other_menu/traditional_alcohol/traditional_alcohol.html
+++ b/JUJERY/sub/other_menu/traditional_alcohol/traditional_alcohol.html
@@ -3,16 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="Author" content="왕혜민" />
+    <meta name="description" content="전통주란?" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" property="og:title" content="전통주란?" />
-    <meta name="images" property="og:image" content="../../main_menu_type/images/icon/thumnail.png" />
-    <meta name="description" property="og:description" content="우리 역사와 문화가 담긴 전통주를 만나보세요." />
-    <meta name="type" property="og:type" content="article" />
+    <link rel="shortcut icon" type="image" href="../../../images/logo/jujery_page_shortcut_icon.png" />
     <link rel="stylesheet" href="./css/traditional_alcohol.css" />
-    <link rel="shortcut icon" type="image" href="../../main_menu_type/images/icon/jujerytitlelogo.png" />
-    <title>전통주란?</title>
-    <script src="./js/jquery.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <script src="./js/side_bar.js" defer></script>
+    <title>전통주란?</title>
   </head>
   <body>
     <div class="wrapper">
