--- a/JUJERY/sub/main_menu_type/chungjoo/chungjoo.html
+++ b/JUJERY/sub/main_menu_type/chungjoo/chungjoo.html
@@ -54,13 +54,13 @@
                     <ul class="subMenu">
                       <li>
                         <a href="../../main_menu_region/gyeonggi/gyeonggi.html">경기 / </a>
-                        <a href="../../main_menu_region/gangwon/">강원 / </a>
-                        <a href="../../main_menu_region/gyeongsang/">경상 / </a>
+                        <a href="../../main_menu_region/gangwon/gangwon.html">강원 / </a>
+                        <a href="../../main_menu_region/gyeongsang/gyeongsang.html">경상 / </a>
                       </li>
                       <li>
-                        <a href="../../main_menu_region/chungcheong/">충청 / </a>
-                        <a href="../../main_menu_region/jeolla/">전라 / </a>
-                        <a href="../../main_menu_region/jeju/">제주</a>
+                        <a href="../../main_menu_region/chungcheong/chungcheong.html">충청 / </a>
+                        <a href="../../main_menu_region/jeolla/jeolla.html">전라 / </a>
+                        <a href="../../main_menu_region/jeju/jeju.html">제주</a>
                       </li>
                     </ul>
                   </li>
